[package]
name = "mkdr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mkdr"
path = "src/main.rs"

[dependencies]
pulldown-cmark = { version = "0.9", features = [] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
libc = "0.2"

[profile.release]
strip = true
opt-level = 3
lto = true
